--- a/visualizer.html
+++ b/visualizer.html
@@ -8,6 +8,9 @@
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- KaTeX for rendering formulas -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.js"></script>
 </head>
 <body>
     <div id="root"></div>
@@ -18,6 +21,22 @@
         const SkipBack = () => <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2"><polygon points="19 20 9 12 19 4 19 20"></polygon><line x1="5" y1="19" x2="5" y2="5"></line></svg>;
         const SkipForward = () => <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2"><polygon points="5 4 15 12 5 20 5 4"></polygon><line x1="19" y1="5" x2="19" y2="19"></line></svg>;
         const AlertCircle = () => <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="8" x2="12" y2="12"></line><line x1="12" y1="16" x2="12.01" y2="16"></line></svg>;
+
+        const renderFormula = (formulaObj) => {
+          if (!formulaObj) return null;
+          const { latex, expr } = formulaObj;
+          if (latex && window.katex) {
+            try {
+              const html = window.katex.renderToString(latex, { throwOnError: false, displayMode: true });
+              return <div dangerouslySetInnerHTML={{ __html: html }} className="mb-2" />;
+            } catch (e) {
+              // fallback
+              return <pre className="text-xs text-white">{latex || expr}</pre>;
+            }
+          } else {
+            return <pre className="text-xs text-white">{expr}</pre>;
+          }
+        };
 
         // Enhanced visualization components
         const ArrayVisualization = ({ arr, name }) => {
@@ -69,6 +88,37 @@
         };
 
         const MatrixVisualization = ({ matrix, name }) => {
+          // backend ndarray support
+          if (matrix && matrix.__ndarray__) {
+            const shape = matrix.shape || [];
+            const dtype = matrix.dtype || '';
+            const values = matrix.values || matrix.summary?.sample || null;
+            return (
+              <div className="space-y-2">
+                <div className="text-xs text-gray-400 mb-2">ndarray {shape.join('×')} dtype={dtype}</div>
+                {values ? (
+                  <div className="inline-block border-2 border-green-500 rounded">
+                    {Array.isArray(values) && Array.isArray(values[0]) ? (
+                      values.map((row, i) => (
+                        <div key={i} className="flex">
+                          {row.map((v, j) => (
+                            <div key={j} className="w-14 h-14 border border-green-700/30 bg-green-900/20 flex items-center justify-center text-green-300 font-mono text-xs">
+                              {typeof v === 'number' ? v.toFixed(2) : JSON.stringify(v)}
+                            </div>
+                          ))}
+                        </div>
+                      ))
+                    ) : (
+                      <div className="text-sm text-gray-300 p-2">Sample: {JSON.stringify(values)}</div>
+                    )}
+                  </div>
+                ) : (
+                  <div className="text-sm text-gray-400">Large array — showing summary: {JSON.stringify(matrix.summary || {})}</div>
+                )}
+              </div>
+            );
+          }
+
           // Check if it's a 2D array
           if (!Array.isArray(matrix) || !Array.isArray(matrix[0])) {
             return <span className="font-mono text-orange-700">{JSON.stringify(matrix)}</span>;
@@ -102,16 +152,15 @@
 
         const PythonVisualizer = () => {
           const [code, setCode] = useState(`# Try different examples!
-list1 = [1, 2, 3]
-list2 = [4, 5, 6]
-list1.extend(list2)
-result = list1[0] + list1[-1]
+import numpy as np
 
-# Dictionary example
-person = {"name": "Alice", "age": 30}
+def sigmoid(x):
+    return 1 / (1 + np.exp(-x))
 
-# Matrix example
-matrix = [[1, 2], [3, 4]]`);
+x = np.array([[1.0, 2.0], [3.0, 4.0]])
+w = np.random.randn(3,2)
+y = sigmoid(x * 0.5)
+z = x + np.array([10,20])`);
           const [executionLog, setExecutionLog] = useState([]);
           const [currentStep, setCurrentStep] = useState(0);
           const [isRunning, setIsRunning] = useState(false);
@@ -176,19 +225,20 @@ matrix = [[1, 2], [3, 4]]`);
           };
 
           const detectType = (value) => {
+            if (!value && typeof value === 'object') return 'other';
+            // backend ndarray signature
+            if (value && value.__ndarray__) return 'ndarray';
+            if (value && value.__torch_tensor__) return 'tensor';
             if (Array.isArray(value)) {
-              if (value.length > 0 && Array.isArray(value[0])) {
-                return 'matrix';
-              }
+              if (value.length > 0 && Array.isArray(value[0])) return 'matrix';
               return 'array';
             }
-            if (typeof value === 'object' && value !== null && !Array.isArray(value)) {
-              return 'dict';
-            }
+            if (typeof value === 'object' && value !== null) return 'dict';
             if (typeof value === 'string') return 'string';
             if (typeof value === 'number') return 'number';
             return 'other';
           };
+
 
           const renderValue = (value, name) => {
             const type = detectType(value);
@@ -368,6 +418,12 @@ matrix = [[1, 2], [3, 4]]`);
                         </div>
                         {currentStepData.code && (
                           <code className="text-sm font-mono text-white">{currentStepData.code}</code>
+                        )}
+                        {/* This renders the formula if present */}
+                        {currentStepData.formula && (
+                          <div className="mt-3">
+                            {renderFormula(currentStepData.formula)}
+                          </div>
                         )}
                       </div>
                     )}
