--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script type="text/babel" src="frontend/components/MatrixVisualization.js"></script>
     <script type="text/babel" src="frontend/components/DictVisualization.js"></script>
     <script type="text/babel" src="frontend/components/NeuralNetworkVisualization.js"></script>
+    <script type="text/babel" src="frontend/components/RecursionTree.js"></script>
     <script type="text/babel" src="frontend/components/CodeEditor.js"></script>
     <script type="text/babel" src="frontend/components/VisualCanvas.js"></script>
     <script type="text/babel" src="frontend/components/Controls.js"></script>
